@@ -1,4 +1,5 @@
 3.0.9
+ * Fix legacy regex for temporary files from 2.2 (CASSANDRA-12565)
  * Add option to state current gc_grace_seconds to tools/bin/sstablemetadata (CASSANDRA-12208)
  * Fix file system race condition that may cause LogAwareFileLister to fail to classify files (CASSANDRA-11889)
  * Fix file handle leaks due to simultaneous compaction/repair and
